# CompGeoRust

./: Cargo.toml
project_1/: .gitignore  Cargo.toml
project_1/src/: main.rs  merge_sort.rs  plotting.rs
project_2/: Cargo.toml
project_2/src/: gift_wrapping.rs  grahams_scan.rs  grahams_scan_parallel.rs  input_generation.rs  main.rs  plotting.rs  types.rs  utils.rs
src/: input_generation.rs  main.rs  merge.rs  merge_sort.rs  plotting.rs  utils.rs
