[workspace]
members = [
    "project_1",
    "project_2"
]
resolver = "2"

# The following profiles optimize projects in debug mode
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies but not for our code:
[profile.dev.package."*"]
opt-level = 3